z-index bug fix

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,6 +7,7 @@ header {
   display: flex;
   align-items: center;
   font-weight: bold;
+  z-index: 10;
 }
 
 .ul-links {
@@ -41,7 +42,7 @@ header {
   top: 100%;
   left: 0;
   width: 100%;
-  z-index: 10;
+  z-index: 100;
   background-color: white;
   min-height: 200px;
   padding: 12px;
